syntax = "proto3";

package secrets.health.v1;

import "envelope.proto";
import "google/protobuf/timestamp.proto";

message SecretsHealthCheckRequest {
  saflib.common.v1.SafAuth auth = 1;
  saflib.common.v1.SafRequest request = 2;
}

message SecretsHealthCheckResponse {
  string status = 1;
  google.protobuf.Timestamp current_time = 2;
}
